# .github

./: .gitignore  .prettierrc  CNAME  Pipfile  README.md  asgi.py  djconfig.py  index.html  manage.py  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  portfolio-details.html  pyproject.toml  requirements.txt  settings.py  tailwind.config.ts  tsconfig.json  wsgi.py
.github/workflows/: remote-ssh-command.yml
api/: Pipfile  admin.py  api_views.py  apps.py  asgi.py  backends.py  forms.py  models.py  serializers.py  settings.py  signals.py  urls.py  views.py  wsgi.py
api/accounts/: admin.py  backends.py  forms.py  models.py  serializers.py  urls.py  views.py
api/authentication/: serializers.py
api/base/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
api/contact/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/core/: settings.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_root_secondary_email.py
api/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/: asgi.py  context.js  context.jsx  global.css  global.scss  globals.scss  layout.js  layout.jsx  layout.tsx  manifest.js  manifest.ts  manifest.webmanifest  navigation.ts  page.css  page.jsx  page.module.css  page.tsx  robots.txt  settings.py  sitemap.xml  styles.css  urls.py  wsgi.py
core/: settings.py  urls.py
lox/: README.md  setup.py
profile/: README.md
public/: index.html
src/: middleware.ts  urls.py
web/: next.config.mjs  package-lock.json  package.json
(+1223 files in other folders)
